@@ -1,6 +1,13 @@
 2009-05-18  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR other/40159
+	* Makefile.tpl (all): Don't assume gcc-bootstrap and
+	gcc-no-bootstrap are mutually exclusive.
+	* Makefile.in: Rebuilt.
+
+2009-05-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR other/40159
 	* Makefile.tpl (all): Don't end with unconditional success.
 	* Makefile.in: Rebuilt.
 
